# Discord-AIU

./: .env.template  .gitignore  GitHub-Actions_Custom-Workflow.yml  LICENSE  README.md  __init__.py  main.py  pyproject.toml  requirements.txt
.github/: GitHub-Actions_Custom-Workflow.yml
documents/: Review-A.md  Review-B.md
src/: __init__.py  discord_aiu.py
