[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Discord-AIU"
version = "1"
description = "Automagically upload your images to a Discord channel via webhook."
authors = ["Daethyra dev-daethyra@protonmail.com"]

[tool.poetry.dependencies]
Pillow = "^10.0.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pyproject-toml = "^0.0.10"